fix(ZNTA-2371)(ZNTA-2377) fix height of panels on jsf pages so dropdowns are visible correctly

--- a/server/zanata-frontend/src/app/styles/legacy.less
+++ b/server/zanata-frontend/src/app/styles/legacy.less
@@ -134,11 +134,13 @@
     word-wrap: break-word;
     white-space: pre-wrap;
   }
-  //fixes to Versions page
-  form#j_idt38.l--push-bottom-0 ~ .g.u-fullWidth {
-    height: 100vh;
+  //fixes to Versions/Projects page
+  form#j_idt38.l--push-bottom-0 ~ .g.u-fullWidth,
+  li#projects.is-active  {
+    height: 80vh;
   }
-  #versions_form ~ ul.dropdown__content li {
-    position: relative;
+  // fix to settings dropdowns on languages tab
+  li#settings ul.tabsContent {
+    height: 80vh;
   }
 }
